--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@types/nodemailer": "^6.4.15",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "tsx": "^4.16.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
