--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/nodemailer": "^6.4.15",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
@@ -21,10 +22,9 @@
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "tsx": "^4.16.2",
-    "yup": "^1.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
