--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/nodemailer": "^6.4.15",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
